; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpdc/extr_ntpdc_ops.c_do_trustkey.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpdc/extr_ntpdc_ops.c_do_trustkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parse = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@MAXARGS = common dso_local global i32 0, align 4
@impl_ver = common dso_local global i64 0, align 8
@INFO_ERR_IMPL = common dso_local global i32 0, align 4
@IMPL_XNTPD = common dso_local global i64 0, align 8
@IMPL_XNTPD_OLD = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [7 x i8] c"done!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parse*, i32*, i32)* @do_trustkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_trustkey(%struct.parse* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.parse*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.parse* %0, %struct.parse** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %15 = load i32, i32* @MAXARGS, align 4
  %16 = zext i32 %15 to i64
  %17 = call i8* @llvm.stacksave()
  store i8* %17, i8** %7, align 8
  %18 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %8, align 8
  store i32 0, i32* %13, align 4
  store i64 0, i64* %9, align 8
  br label %19

19:                                               ; preds = %37, %3
  %20 = load i64, i64* %9, align 8
  %21 = load %struct.parse*, %struct.parse** %4, align 8
  %22 = getelementptr inbounds %struct.parse, %struct.parse* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = icmp ult i64 %20, %23
  br i1 %24, label %25, label %40

25:                                               ; preds = %19
  %26 = load %struct.parse*, %struct.parse** %4, align 8
  %27 = getelementptr inbounds %struct.parse, %struct.parse* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = load i64, i64* %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %13, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %13, align 4
  %35 = sext i32 %33 to i64
  %36 = getelementptr inbounds i32, i32* %18, i64 %35
  store i32 %32, i32* %36, align 4
  br label %37

37:                                               ; preds = %25
  %38 = load i64, i64* %9, align 8
  %39 = add i64 %38, 1
  store i64 %39, i64* %9, align 8
  br label %19

40:                                               ; preds = %19
  br label %41

41:                                               ; preds = %54, %40
  %42 = load i64, i64* @impl_ver, align 8
  %43 = load i32, i32* %6, align 4
  %44 = load i32, i32* %13, align 4
  %45 = bitcast i32* %18 to i8*
  %46 = call i32 @doquery(i64 %42, i32 %43, i32 1, i32 %44, i32 4, i8* %45, i64* %10, i64* %11, i8** %12, i32 0, i32 8)
  store i32 %46, i32* %14, align 4
  %47 = load i32, i32* %14, align 4
  %48 = load i32, i32* @INFO_ERR_IMPL, align 4
  %49 = icmp eq i32 %47, %48
  br i1 %49, label %50, label %56

50:                                               ; preds = %41
  %51 = load i64, i64* @impl_ver, align 8
  %52 = load i64, i64* @IMPL_XNTPD, align 8
  %53 = icmp eq i64 %51, %52
  br i1 %53, label %54, label %56

54:                                               ; preds = %50
  %55 = load i64, i64* @IMPL_XNTPD_OLD, align 8
  store i64 %55, i64* @impl_ver, align 8
  br label %41

56:                                               ; preds = %50, %41
  %57 = load i32, i32* %14, align 4
  %58 = icmp eq i32 %57, 0
  br i1 %58, label %59, label %62

59:                                               ; preds = %56
  %60 = load i32*, i32** %5, align 8
  %61 = call i32 @fprintf(i32* %60, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %62

62:                                               ; preds = %59, %56
  %63 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %63)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @doquery(i64, i32, i32, i32, i32, i8*, i64*, i64*, i8**, i32, i32) #2

declare dso_local i32 @fprintf(i32*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
